syntax="proto3";

// import "google/protobuf/struct.proto";

option csharp_namespace="Auth.app.Services";
package authorization;

service AuthorizationService{
    rpc TestFunction(TestMessage) returns (TestReply);
    rpc ValidateToken(TokenRequest) returns (TokenValidationReply);
}

message TestMessage{
    string testField=1;
}

message TestReply{
    repeated int32 otherGield=1;
}

message TokenRequest{
    string token=1;
}

message TokenValidationReply{
    bool isValid=1;
    optional string error=2;
    map<string,string>claims=3;
}
